fix croppie avatar on old platform

--- a/src/angularjs/template/profitelo_theme/stylesheets/common/components/interface/image-crop/image-crop.sass
+++ b/src/angularjs/template/profitelo_theme/stylesheets/common/components/interface/image-crop/image-crop.sass
@@ -42,7 +42,7 @@
     +xsm
       display: block
       position: absolute
-      bottom: 12px
+      bottom: 17px
       right: 7px
       color: $c-tertiary-txt
 
